Closed Bug 48243 Opened 24 years ago Closed 24 years ago

event.shiftKey not set in event passed to oncommand handler

Categories

(Core :: XUL, defect, P3)

defect

Tracking

()

RESOLVED FIXED

People

(Reporter: law, Assigned: saari)

References

Details

(Whiteboard: [nsbeta3+])

To fix bug 21137 we need to be able to detect whether the shift key is depressed 
when the Reload button is clicked.

This should be possible by examining the event.shiftKey property on the event 
passed to the <broadcaster>'s oncommand handler.  However, that property is not 
set properly and is always "false."

I suspect other properties are similarly broken.
Marking as nsbeta3 since this blocks the nsbeta3+ bug 21137.
Blocks: 21137
Keywords: nsbeta3
FYI: It works fine in Mailnews: Open a new msg in the not-default editor by
activating SHIFT+(New Msg-button).
Should be +.  This is bad.
Status: NEW → ASSIGNED
Ben, that's probably because Mailnews is using an onclick handler, or not using 
a <broadcaster>, or something like that.  I think this problem only appears in a 
somewhat limited set of circumstances.
reassigning to saari as nsbeta3+, P3 for M18
Assignee: hyatt → saari
Status: ASSIGNED → NEW
Whiteboard: [nsbeta3+]
Target Milestone: --- → M18
Please note that this is a blocker for bug 21137.  I'm not sure that one's a P3 
and I'd hate to see the fix for that one go to waste...
clearing nsbeta3+ for review
Whiteboard: [nsbeta3+]
nsbeta3+, P3 for M18, since this is the only way to get the reload-from-net feature.
Whiteboard: [nsbeta3+]
Fixed
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Bill - I was going to verify fix by loading a local page, edit the page and
reload it with the shift key.  Would this be sufficient?
No, unfortunately it is not that simple.  A local file will be verified using
the timestamp on the file.  You need to either have a web server that you can
monitor (and the provides the appropriate headers that indicate that the file
has not changed even though it has).  You can do it with local files but you
have to jigger the file timestamps.  Bug 48275 explains how to do that.
You need to log in before you can comment on or make changes to this bug.