Fix for bug 48243, modifiers not sent with oncommand event. r=hyatt